# Columns

./: .editorconfig  .gitignore  BUILD.txt  CMakeLists.txt  CMakePresets.json  Columns.sln  Columns.vcxproj  LICENSE.Zlib.txt  LICENSE.txt  Project.vcxproj  README.md  launch.vs.json  main.json
.github/workflows/: deploy.yml  deploy_linux.yml  deploy_windows.yml  main.yml  package_gamefiles.yml
cmake_modules/: Findgme.cmake
gamefilesc/: main.json
gamefilesc/bgm/: 01 - Filthy (Select).vgz  02 - Quagmire (Start).vgz  03 - Clotho.vgz  04 - Clotho (Danger).vgz  05 - Clotho ~ Bells.vgz  06 - Clotho ~ Bells (Danger).vgz  07 - Lathesis.vgz  08 - Lathesis (Danger).vgz  09 - Atropos.vgz  10 - Atropos (Danger).vgz  11 - Atropos ~ Bells.vgz  12 - Concilation (Game Over).vgz  13 - Boy Wonder (Name Entry).vgz  atropos.json  clotho.json  gameOver.json  lathesis.json  nameEntry.json  readme.txt  select.json  start.json
gamefilesc/level/: baseLevel.json  baseLevel1.json  baseLevel2.json  highScores.json  jewelClasses.json  levelOptionsAmateur.json  levelOptionsArcade.json  levelOptionsNovice.json  levelOptionsPro.json  load.json  load2.json  loadAmateur.json  loadAmateur1.json  loadAmateur2.json  loadArcade.json  loadNovice.json  loadNovice1.json  loadNovice2.json  loadPro.json  loadPro1.json  loadPro2.json  saveVarsFile.json
gamefilesc/res/: actions.json  fonts.json  levelTextures.json  loadTexture.json  mainMenuTextures.json  textures.json  updateSettings.json
gamefilesc/res/shaders/: default.json  lanczos.json  scale4xhq.json  xbrz4x.json
gamefilesc/ui/: gameInputEvents.json  loadMain.json  mainMenu.json  mainMenuStart.json  settings.json  settingsFile.json
gamefilesc/ui/menu/: common.json  commonFlash.json  commonFlashMatch.json  commonOriginal.json  flash.json  flash2p.json  flashDoubles.json  menu.json  menuFlash.json  menuFlashMatch.json  menuOriginal.json  original.json  original2p.json  originalDoubles.json
gamefilesc/ui/options/: colorTest.json  options.json  soundTest.json
gamefilesc/ui/play/: arcade.json  flash.json  flash2p.json  flashDoubles.json  gameOver.json  gameOver1.json  gameOver2.json  gameStart.json  gameStart1.json  gameStart2.json  original.json  original2p.json  originalDoubles.json  overlay.json  overlay2.json  pause.json  pause1.json  pause2.json  pressStart.json  pressStart1.json  pressStart2.json
pkg/linux/: columns.desktop
src/: CompositeTexture.cpp  CompositeTexture.h  FileUtils.cpp  Game.cpp  GameConstants.h  GameUtilsGame.cpp  GameUtilsGame.h  ImageUtils.cpp  Main.cpp  RegisterHooks.cpp  ShaderManager.cpp
src/Actions/: ActLevel.h
src/Game/: Game2.cpp  Game2.h  Jewel.cpp  Jewel.h  JewelClass.cpp  JewelClass.h  Level.cpp  Level.h  LevelSurface.cpp  LevelSurface.h
src/Game/Actions/: ActLevel.h
src/Game/Jewel/: Jewel.cpp  Jewel.h  JewelClass.h  Jewels.cpp  Jewels.h
src/Game/Level/: Level.cpp  Level.h  LevelBoard.cpp  LevelBoard.h  LevelBoardUtils.cpp  LevelBoardUtils.h  LevelCell.h  LevelDraw.cpp  LevelDraw.h  LevelInputManager.cpp  LevelInputManager.h  LevelOptions.h  LevelOptionsManager.cpp  LevelOptionsManager.h  LevelPlayer.cpp  LevelPlayer.h  LevelPlayerManager.cpp  LevelPlayerManager.h  LevelSave.cpp  LevelSave.h  LevelSaveObject.h  LevelScore.h  LevelScoreManager.cpp  LevelScoreManager.h  LevelState.h  LevelStateObject.h  LevelUIObject.cpp  LevelUIObject.h
src/Game/Save/: SaveLevel.cpp
src/Parser/: ParseAction2.cpp  ParseActionGame.cpp  ParseCompositeTexture.cpp  ParseFile2.cpp  ParseFileGame.cpp  ParseImageContainer.cpp  ParseImageContainer.h  ParseJewel.cpp  ParseJewelClass.cpp  ParseLevel.cpp  ParsePanel.cpp  ParsePredicateGame.cpp  ParseTexture.cpp  ParseTexturePack.cpp
src/Parser/Actions/: ParseLevelActions.cpp  ParseLevelActions.h
src/Parser/Game/: ParseJewel.cpp  ParseJewelClass.cpp  ParseJewelClass.h  ParseLevel.cpp
src/Parser/Jewel/: ParseJewel.cpp  ParseJewel.h  ParseJewelClass.cpp
src/Parser/Level/: ParseLevel.cpp  ParseLevelOptions.cpp  ParseLevelOptions.h  ParseLevelSave.cpp  ParseLevelSave.h  ParseLevelScores.cpp  ParseLevelScores.h
src/Parser/Utils/: ParseUtilsGameKey.cpp  ParseUtilsGameKey.h  ParseUtilsGameVal.cpp  ParseUtilsGameVal.h
src/SFML/: Sprite2.h  VGM.cpp  VGM.h
src/TexturePacks/: CachedTexturePack.cpp  CachedTexturePack.h  CompositeTexturePack.cpp  CompositeTexturePack.h  IndexedTexturePack.cpp  IndexedTexturePack.h  StackedTexturePack.h  TexturePack.h
